allure-macros/tests/ui/fail/epic_wrong_type.stderr
error: Expected string literal
 --> tests/ui/fail/epic_wrong_type.rs:4:15
  |
4 | #[allure_epic(123)]
  |               ^^^

warning: unused import: `allure_test`
 --> tests/ui/fail/epic_wrong_type.rs:1:21
  |
1 | use allure_macros::{allure_test, allure_epic};
  |                     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
